--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "flowbite-react": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "swiper": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
